fix: fix flickering in Navbar when page changes
use useMediaQuery hook instaf of useWindowSize
fix bad styles in global.scss

--- a/pages/_globals.scss
+++ b/pages/_globals.scss
@@ -1,8 +1,9 @@
 html,
 body {
-	padding: 0;
 	margin: 0;
-	overflow: hidden;
+	padding: 0 !important;
+	overflow: auto !important;
+
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
